--- a/client/src/style.css
+++ b/client/src/style.css
@@ -15,6 +15,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
+::-webkit-scrollbar {
+  background-color: #202324;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #575e62;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
